Corrected the logo alignment

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -21,10 +21,11 @@
 
 .btn:hover{
     background-color: #09622e;
-    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.378);
+    /* box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.378); */
     cursor: pointer;
     border: 1px solid black;
     font-weight: bold;
+    border-radius: 100px;
 }
 
 nav{
